enumcapsulate/tests/expand-macros/from/fail/union.err.txt
error: Only enums can use this derive
 --> /tests/expand-macros/from/fail/union.rs:4:11
  |
4 | pub union Union {
  |           ^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to previous error
